TSK-987: Check and fix problems identified by spotbugs